# ra-killer

./: .env.example  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  TODO.md  bandcamp_artists.csv  pyproject.toml  venues.csv
.github/workflows/: deploy.yml
deploy/: Caddyfile  ra-killer.service
scripts/: backfill_ra.py  recommend_once.py  scrape_once.py  seed_taste.py  setup_supabase.sql
src/: config.py  db.py  log.py  main.py  models.py  normalize.py  scheduler.py
src/bot/: telegram.py  tts.py  twilio_ivr.py
src/notify/: alerts.py
src/recommend/: ranker.py  scorer.py  script_writer.py  taste.py
src/scrapers/: base.py  basement.py  dice.py  lightandsound.py  nycnoise.py  partiful.py  ra.py  runner.py
tests/: test_dedup.py  test_normalization_gaps.py  test_normalize_proposed.py
tests/test_bot/: test_feedback.py  test_tts.py  test_weekly_script.py
tests/test_recommend/: test_scorer.py
tests/test_scrapers/: test_basement.py  test_dice.py  test_lightandsound.py  test_nycnoise.py  test_partiful.py  test_ra.py
